--- a/aboutus.html
+++ b/aboutus.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="row row-containt">
+            <div class="row row-content">
                 <div class="col-sm-6">
                     <h2>Our History</h2>
                     <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par
@@ -113,7 +113,7 @@
 
 
 
-            <div class="row row-containt align-items-center">
+            <div class="row row-content align-items-center">
                 <div class="col-12">
                     <h2>Corporate Leadership</h2>
                     <!-- use tabs -->
