Bootstrap and JQuery

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
+                                <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
                                 <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
                                     different salads, six enticing
                                     appetizers,
@@ -267,6 +267,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -456,6 +464,17 @@
                 $('[data-toggle="tooltip"]').tooltip();
             });
         </script> -->
+        <script>
+            $(document).ready(function(){
+                $('#mycarousel').carousel({interval:2000});
+                $('#carousel-pause').click(function(){
+                    $('#mycarousel').carousel('pause');
+                });
+                $('#carousel-play').click(function(){
+                    $('#mycarousel').carousel('cycle');
+                });
+            });
+        </script>
 
 </body>
 
