--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                         <div class="form-group row">
                             <div class="col-sm-5 offset-sm-2">
                                 <button class="btn btn-secondary btn-sm mr-auto" type="button"
-                                        data-dismiss="modal">Cancel</button>
-                                <button class="btn btn-primary btn-sm mr-1" type="submit">Reserve</button>        
+                                    data-dismiss="modal">Cancel</button>
+                                <button class="btn btn-primary btn-sm mr-1" type="submit">Reserve</button>
                                 <!-- <div class="btn-toolbar" role="toolbar">
                                     <div class="btn-group mr-1" role="group">
                                         <button class="btn form-control btn-secondary mr-1" type="button"
@@ -203,7 +203,7 @@
                                         <button class="btn form-control btn-primary" type="submit">Reserve</button>
                                     </div>
                                 </div> -->
-                            </div>   
+                            </div>
                         </div>
                 </div>
                 </form>
@@ -267,14 +267,19 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
+                    <!-- Two button <div class="btn-group" id="carouselButton">
                         <button class="btn btn-danger btn-sm" id="carousel-pause">
                             <span class="fa fa-pause"></span>
                         </button>
                         <button class="btn btn-danger btn-sm" id="carousel-play">
                             <span class="fa fa-play"></span>
                         </button>
-                    </div>
+                    </div> -->
+                    <!--Replace with one button-->
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause" id="carousel-button-icon"></span>
+                    </button>
+
                 </div>
             </div>
         </div>
@@ -465,13 +470,20 @@
             });
         </script> -->
         <script>
-            $(document).ready(function(){
-                $('#mycarousel').carousel({interval:2000});
-                $('#carousel-pause').click(function(){
-                    $('#mycarousel').carousel('pause');
-                });
-                $('#carousel-play').click(function(){
-                    $('#mycarousel').carousel('cycle');
+            $(document).ready(function () {
+                $('#mycarousel').carousel({ interval: 2000 });
+                $('#carouselButton').click(function () {
+                    if ($('#carouselButton').children('span').hasClass('fa-pause')) {
+                        $('#mycarousel').carousel('pause');
+                        $('#carouselButton').children('span').removeClass('fa-pause');
+                        $('#carouselButton').children('span').addClass('fa-play');
+                    } else {
+                        $('#mycarousel').carousel('cycle');
+                        $('#carouselButton').children('span').removeClass('fa-play');
+                        $('#carouselButton').children('span').addClass('fa-pause');
+                    }
+
+                    
                 });
             });
         </script>
