--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#"><span
+                    <li class="nav-item active"><a class="nav-link" href="./index.html"><span
                                 class="fa fa-home fa-lg"></span>Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
                                 class="fa fa-info fa-lg"></span>About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Menu</a>
+                    <li class="nav-item"><a class="nav-link" href="./menu.html"><span class="fa fa-list fa-lg"></span>Menu</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <!-- <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span>Login
+                    </a> -->
+                    <a id="loginButton">
                         <span class="fa fa-sign-in"></span>Login
                     </a>
                 </span>
@@ -112,8 +115,9 @@
                     <!-- <a role="button" class="btn btn-block nav-link btn-warning" 
                     data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>"
                     data-placement="bottom" href="#reservation">Reserve Table</a> -->
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
-                        data-target="#reserveModal">Reserve Table</a>
+                    <!-- <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
+                        data-target="#reserveModal">Reserve Table</a> -->
+                    <a role="button" class="btn btn-block nav-link btn-warning" id="reserveButton">Reserve Table</a>
 
                 </div>
             </div>
@@ -244,7 +248,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+                            <img class="d-block img-fluid" src="img/alberto.png" width=250 height=105 alt="alberto">
                             <div class="carousel-caption d-none d-md-block">
                                 <h2 class="mt-0">Alberto Somayya</h2>
                                 <h4>Executive Chef</h4>
@@ -333,7 +337,7 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" width=200 height=200 alt="alberto">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -419,10 +423,10 @@
                     <div class="col-4 offset-1 col-sm-2">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="./index.html">Home</a></li>
                             <li><a href="./aboutus.html">About</a></li>
-                            <li><a href="#">Menu</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="./menu.html">Menu</a></li>
+                            <li><a href="./contactus.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-7 col-sm-5">
@@ -482,8 +486,12 @@
                         $('#carouselButton').children('span').removeClass('fa-play');
                         $('#carouselButton').children('span').addClass('fa-pause');
                     }
-
-                    
+                });
+                $('#loginButton').click(function(){
+                    $('#loginModal').modal('show');
+                });
+                $('#reserveButton').click(function(){
+                    $('#reserveModal').modal('show');
                 });
             });
         </script>
