--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Ristorante Con Fusion: About Us</title>
+    <title>World Food Fusion: Contact Us</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
+                    <h1>World Food Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
@@ -69,11 +69,11 @@
                     <address style="font-size: 100%">
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
+		              US<br>
 		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
 		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
 		              <i class="fa fa-envelope"></i>:
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
+                        <a href="mailto:worldfusion@food.net">worldfusion@food.net</a>
 		           </address>
             </div>
             <div class="col-12 col-sm-6 offset-sm-1">
@@ -174,11 +174,11 @@
                     <address>
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
+		              US<br>
                       <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
                       <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
                       <i class="fa fa-envelope fa-lg"></i>: 
-                      <a href="mailto:confusion@food.net">confusion@food.net</a>
+                      <a href="mailto:worldfusion@food.net">worldfusion@food.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
@@ -194,7 +194,7 @@
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2021 World Food Fusion</p>
                 </div>
            </div>
         </div>
