--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Ristorante Con Fusion</title>
+    <title>World Food Fusion</title>
 </head>
 
 <body>
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
+                    <h1>World Food Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
@@ -434,11 +434,11 @@
                         <address>
                             121, Clear Water Bay Road<br>
                             Clear Water Bay, Kowloon<br>
-                            HONG KONG<br>
+                            US<br>
                             <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
                             <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
                             <i class="fa fa-envelope fa-lg"></i>: <a
-                                href="mailto:confusion@food.net">confusion@food.net</a>
+                                href="mailto:worldfusion@food.net">worldfusion@food.net</a>
                         </address>
                     </div>
                     <div class="col-12 col-sm-4 align-self-center">
@@ -459,7 +459,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-auto">
-                        <p>© Copyright 2018 Ristorante Con Fusion</p>
+                        <p>© Copyright 2021 World Food Fusion</p>
                     </div>
                 </div>
             </div>
